force-app/main/default/objects/PaymentDate__c/PaymentDate__c.object-meta.xml
<CustomObject>
    <label>払込日データ</label>
    <nameField>
        <label>払込日データ名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>