force-app/main/default/objects/PaymentDate__c/fields/CollectiveCode__c.field-meta.xml
<CustomField>
    <fullName>CollectiveCode__c</fullName>
    <label>集団コード</label>
    <length>32</length>
    <type>Text</type>
</CustomField>