force-app/main/default/objects/PaymentDate__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>払込日</label>
    <type>Date</type>
</CustomField>