force-app/main/default/objects/PaymentDate__c/fields/R_Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>R_Contract_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>契約情報名</label>
    <referenceTo>Contract_Information__c</referenceTo>
    <relationshipLabel>払込日データ</relationshipLabel>
    <relationshipName>R_ContractInformation_PaymentDate</relationshipName>
    <type>Lookup</type>
</CustomField>